--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -19,5 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "sslcommerz-lts": "^1.2.0"
+  },
+  "devDependencies": {
+    "prisma": "^7.1.0"
   }
 }
