--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
     "version": 2,
+    "builds": [
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
             "src": "/(.*)",
@@ -13,10 +19,5 @@
                 "OPTIONS"
             ]
         }
-    ],
-    "functions": {
-        "api/**/*.js": {
-            "maxDuration": 10
-        }
-    }
+    ]
 }
