--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node index.js",
     "build": "prisma generate",
     "postinstall": "prisma generate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:load": "k6 run tests/load/load-test.js",
+    "test:stress": "k6 run tests/stress/stress-test.js"
   },
   "keywords": [],
   "author": "",
