fix: increase DB pool to 10, add Vercel function config

--- a/vercel.json
+++ b/vercel.json
@@ -19,5 +19,11 @@
                 "OPTIONS"
             ]
         }
-    ]
+    ],
+    "functions": {
+        "index.js": {
+            "maxDuration": 30,
+            "memory": 1024
+        }
+    }
 }
